# inframind-digital-twin

./: .env.example  Dockerfile  README.md  pyproject.toml
app/: __init__.py  analysis.py  auth.py  config.py  discovery.py  github_pr.py  graph.py  main.py  mcp_server.py  models.py  policy.py  repository.py  service.py  telemetry.py
docs/runbooks/: production-readiness.md
evaluations/: golden_dataset.jsonl
infra/kubernetes/: deployment.yaml  namespace.yaml  network-policy.yaml
static/: app.js  index.html  styles.css
tests/: test_digital_twin.py  test_evaluations.py
