[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "inframind-digital-twin"
version = "0.1.0"
description = "Read-only multi-cloud digital twin with governed AI remediation"
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.115,<1",
  "uvicorn[standard]>=0.32,<1",
  "pydantic>=2.10,<3",
  "PyJWT[crypto]>=2.10,<3",
  "httpx>=0.28,<1",
  "boto3>=1.36,<2",
  "azure-identity>=1.19,<2",
  "azure-mgmt-resourcegraph>=8.0,<9",
  "pydantic-ai>=1.0,<2",
  "mcp>=1.0,<2",
  "python-hcl2>=5.1,<8",
  "opentelemetry-api>=1.29,<2",
]

[project.optional-dependencies]
dev = ["pytest>=8.3,<9", "pytest-asyncio>=0.25,<1", "httpx>=0.28,<1"]

[tool.setuptools.packages.find]
include = ["app*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
